[package]
name = "inotify_trial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.10"
bitflags     = "1"
futures-core = { version = "0.3.1", optional = true }
inotify-sys  = "0.1.3"
libc         = "0.2"
tempfile     = "3.1.0"
futures-util = "0.3.1"
tokio        = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
